// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCustomizer components  render with no variations and press on Small SKU 1`] = `
<DocumentFragment>
  <div
    class="flex-ns pv6-ns justify-center-ns"
  >
    <div
      class="w-100 w-third-ns flex tc items-center-ns h-100-ns ph2-ns"
    >
      <img
        alt="Suprema"
        class="image"
        src="https://delivery.vteximg.com.br/arquivos/ids/155442/super-supreme.e34cdf7984831c25c4eda14a2d361a20.1.jpg?v=636770452538570000"
        style="object-fit: cover;"
      />
    </div>
    <div
      class="w-40-ns ph2-ns"
    >
      <div
        class="productName t-heading-4 c-on-base ph5 pt5-s"
      >
        Super Suprema
      </div>
      <div
        class="ph5 pt4 pb2 pb4-ns"
      />
      <div
        class="ph5 pb4 c-muted-2 t-small"
      >
        <span>
          Pick one size
        </span>
      </div>
      <div
        class="false singleChoiceContainer hover-bg-muted-5 ph4 pointer bb b--muted-5 bw1"
        role="button"
        tabindex="0"
      >
        <div
          class="relative flex items-center justify-between pv5"
        >
          <div
            class="itemDescriptionContainer itemDescriptionContainerSingle flex"
          >
            <div />
            <div
              class="flex flex-column justify-center"
            >
              <div
                class="itemDescriptionName itemDescriptionNameSingle t-heading-5 c-on-base"
              >
                Small
              </div>
              <div
                class="itemDescription itemDescriptionSingle flex t-small fw5 c-action-primary mt1"
              >
                <div>
                  ProductPrice
                </div>
              </div>
            </div>
          </div>
          <div
            class="singleChoiceActions mt3"
          >
            <div>
              Radio
            </div>
          </div>
        </div>
      </div>
      <div
        class="false singleChoiceContainer hover-bg-muted-5 ph4 pointer bb b--muted-5 bw1"
        role="button"
        tabindex="0"
      >
        <div
          class="relative flex items-center justify-between pv5"
        >
          <div
            class="itemDescriptionContainer itemDescriptionContainerSingle flex"
          >
            <div />
            <div
              class="flex flex-column justify-center"
            >
              <div
                class="itemDescriptionName itemDescriptionNameSingle t-heading-5 c-on-base"
              >
                Medium
              </div>
              <div
                class="itemDescription itemDescriptionSingle flex t-small fw5 c-action-primary mt1"
              >
                <div>
                  ProductPrice
                </div>
              </div>
            </div>
          </div>
          <div
            class="singleChoiceActions mt3"
          >
            <div>
              Radio
            </div>
          </div>
        </div>
      </div>
      <div
        class="false singleChoiceContainer hover-bg-muted-5 ph4 pointer bb b--muted-5 bw1"
        role="button"
        tabindex="0"
      >
        <div
          class="relative flex items-center justify-between pv5"
        >
          <div
            class="itemDescriptionContainer itemDescriptionContainerSingle flex"
          >
            <div />
            <div
              class="flex flex-column justify-center"
            >
              <div
                class="itemDescriptionName itemDescriptionNameSingle t-heading-5 c-on-base"
              >
                Large
              </div>
              <div
                class="itemDescription itemDescriptionSingle flex t-small fw5 c-action-primary mt1"
              >
                <div>
                  ProductPrice
                </div>
              </div>
            </div>
          </div>
          <div
            class="singleChoiceActions mt3"
          >
            <div>
              Radio
            </div>
          </div>
        </div>
      </div>
      <div />
      <div
        class="w-100"
      />
      <div
        class="z-2 fixed bg-white bottom-0 w-40-ns ph1-ns w-100 bt b--light-gray"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProductCustomizer components  render with no variations and press on Small SKU 2`] = `
<DocumentFragment>
  <div
    class="flex-ns pv6-ns justify-center-ns"
  >
    <div
      class="w-100 w-third-ns flex tc items-center-ns h-100-ns ph2-ns"
    >
      <img
        alt="Suprema"
        class="image"
        src="https://delivery.vteximg.com.br/arquivos/ids/155442/super-supreme.e34cdf7984831c25c4eda14a2d361a20.1.jpg?v=636770452538570000"
        style="object-fit: cover;"
      />
    </div>
    <div
      class="w-40-ns ph2-ns"
    >
      <div
        class="productName t-heading-4 c-on-base ph5 pt5-s"
      >
        Super Suprema
      </div>
      <div
        class="ph5 pt4 pb2 pb4-ns"
      >
        <div>
          ProductPrice
        </div>
      </div>
      <div
        class="ph5 pb4 c-muted-2 t-small"
      >
        <span>
          Pick one size
        </span>
      </div>
      <div
        class="selected bg-muted-5 singleChoiceContainer hover-bg-muted-5 ph4 pointer bb b--muted-5 bw1"
        role="button"
        tabindex="0"
      >
        <div
          class="relative flex items-center justify-between pv5"
        >
          <div
            class="itemDescriptionContainer itemDescriptionContainerSingle flex"
          >
            <div />
            <div
              class="flex flex-column justify-center"
            >
              <div
                class="itemDescriptionName itemDescriptionNameSingle t-heading-5 c-on-base"
              >
                Small
              </div>
              <div
                class="itemDescription itemDescriptionSingle flex t-small fw5 c-action-primary mt1"
              >
                <div>
                  ProductPrice
                </div>
              </div>
            </div>
          </div>
          <div
            class="singleChoiceActions mt3"
          >
            <div>
              Radio
            </div>
          </div>
        </div>
      </div>
      <div
        class="false singleChoiceContainer hover-bg-muted-5 ph4 pointer bb b--muted-5 bw1"
        role="button"
        tabindex="0"
      >
        <div
          class="relative flex items-center justify-between pv5"
        >
          <div
            class="itemDescriptionContainer itemDescriptionContainerSingle flex"
          >
            <div />
            <div
              class="flex flex-column justify-center"
            >
              <div
                class="itemDescriptionName itemDescriptionNameSingle t-heading-5 c-on-base"
              >
                Medium
              </div>
              <div
                class="itemDescription itemDescriptionSingle flex t-small fw5 c-action-primary mt1"
              >
                <div>
                  ProductPrice
                </div>
              </div>
            </div>
          </div>
          <div
            class="singleChoiceActions mt3"
          >
            <div>
              Radio
            </div>
          </div>
        </div>
      </div>
      <div
        class="false singleChoiceContainer hover-bg-muted-5 ph4 pointer bb b--muted-5 bw1"
        role="button"
        tabindex="0"
      >
        <div
          class="relative flex items-center justify-between pv5"
        >
          <div
            class="itemDescriptionContainer itemDescriptionContainerSingle flex"
          >
            <div />
            <div
              class="flex flex-column justify-center"
            >
              <div
                class="itemDescriptionName itemDescriptionNameSingle t-heading-5 c-on-base"
              >
                Large
              </div>
              <div
                class="itemDescription itemDescriptionSingle flex t-small fw5 c-action-primary mt1"
              >
                <div>
                  ProductPrice
                </div>
              </div>
            </div>
          </div>
          <div
            class="singleChoiceActions mt3"
          >
            <div>
              Radio
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class=""
        >
          <div
            class="ph5 pv4 c-muted-2 t-small"
          >
            <span>
              Pick one crust
            </span>
          </div>
          <div
            class="false singleChoiceContainer hover-bg-muted-5 ph4 pointer bb b--muted-5 bw1"
            role="button"
            tabindex="0"
          >
            <div
              class="relative flex items-center justify-between pv5"
            >
              <div
                class="itemDescriptionContainer itemDescriptionContainerSingle flex"
              >
                <div>
                  <img
                    class="br3 mr4"
                    src="https://delivery.vteximg.com.br/arquivos/ids/155411/cheesy-bites.png?v=636759865607400000"
                    style="height: 54px; width: 54px;"
                  />
                </div>
                <div
                  class="flex flex-column justify-center"
                >
                  <div
                    class="itemDescriptionName itemDescriptionNameSingle t-heading-5 c-on-base"
                  >
                    Cheesy Bites
                  </div>
                  <div
                    class="itemDescription itemDescriptionSingle flex t-small fw5 c-action-primary mt1"
                  >
                    <div>
                      + 
                    </div>
                    <div>
                      ProductPrice
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="singleChoiceActions mt3"
              >
                <div>
                  Radio
                </div>
              </div>
            </div>
          </div>
          <div
            class="false singleChoiceContainer hover-bg-muted-5 ph4 pointer bb b--muted-5 bw1"
            role="button"
            tabindex="0"
          >
            <div
              class="relative flex items-center justify-between pv5"
            >
              <div
                class="itemDescriptionContainer itemDescriptionContainerSingle flex"
              >
                <div>
                  <img
                    class="br3 mr4"
                    src="https://delivery.vteximg.com.br/arquivos/ids/155412/stuffed-crust.png?v=636759865852770000"
                    style="height: 54px; width: 54px;"
                  />
                </div>
                <div
                  class="flex flex-column justify-center"
                >
                  <div
                    class="itemDescriptionName itemDescriptionNameSingle t-heading-5 c-on-base"
                  >
                    Stuffed Crust
                  </div>
                  <div
                    class="itemDescription itemDescriptionSingle flex t-small fw5 c-action-primary mt1"
                  >
                    <div>
                      + 
                    </div>
                    <div>
                      ProductPrice
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="singleChoiceActions mt3"
              >
                <div>
                  Radio
                </div>
              </div>
            </div>
          </div>
          <div
            class="false singleChoiceContainer hover-bg-muted-5 ph4 pointer bb b--muted-5 bw1"
            role="button"
            tabindex="0"
          >
            <div
              class="relative flex items-center justify-between pv5"
            >
              <div
                class="itemDescriptionContainer itemDescriptionContainerSingle flex"
              >
                <div>
                  <img
                    class="br3 mr4"
                    src="https://delivery.vteximg.com.br/arquivos/ids/155413/classic.png?v=636759866429100000"
                    style="height: 54px; width: 54px;"
                  />
                </div>
                <div
                  class="flex flex-column justify-center"
                >
                  <div
                    class="itemDescriptionName itemDescriptionNameSingle t-heading-5 c-on-base"
                  >
                    Classic Crust
                  </div>
                </div>
              </div>
              <div
                class="singleChoiceActions mt3"
              >
                <div>
                  Radio
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="dn"
        >
          <div
            class="ph5 pv4 c-muted-2 t-small"
          >
            <span>
              Basic ingredients
            </span>
          </div>
          <div
            class="toggleChoiceContainer selected bg-washed-blue db pa4 pointer bb b--light-gray"
          >
            <div
              class="relative flex justify-between items-center"
            >
              <div
                class="itemDescriptionContainer itemDescriptionContainerToggle flex"
              >
                <div>
                  <img
                    class="br3 mr4"
                    src="https://delivery.vteximg.com.br/arquivos/ids/155431/PIMIENTO-VERDE.png?v=636766050771230000"
                    style="height: 54px; width: 54px;"
                  />
                </div>
                <div
                  class="flex flex-column justify-center"
                >
                  <div
                    class="itemDescriptionName itemDescriptionNameToggle t-heading-5 c-on-base"
                  >
                    Green Pepper
                  </div>
                </div>
              </div>
              <div
                class="toggleChoiceActions "
              >
                <div>
                  Checkbox props={"disabled":false,"name":"Green Pepper","checked":true}
                </div>
              </div>
            </div>
          </div>
          <div
            class="toggleChoiceContainer selected bg-washed-blue db pa4 pointer bb b--light-gray"
          >
            <div
              class="relative flex justify-between items-center"
            >
              <div
                class="itemDescriptionContainer itemDescriptionContainerToggle flex"
              >
                <div>
                  <img
                    class="br3 mr4"
                    src="https://delivery.vteximg.com.br/arquivos/ids/155430/Topping_Aceitunas-Negras.jpg.png?v=636766049376970000"
                    style="height: 54px; width: 54px;"
                  />
                </div>
                <div
                  class="flex flex-column justify-center"
                >
                  <div
                    class="itemDescriptionName itemDescriptionNameToggle t-heading-5 c-on-base"
                  >
                    Black Olives
                  </div>
                </div>
              </div>
              <div
                class="toggleChoiceActions "
              >
                <div>
                  Checkbox props={"disabled":false,"name":"Black Olives","checked":true}
                </div>
              </div>
            </div>
          </div>
          <div
            class="toggleChoiceContainer selected bg-washed-blue db pa4 pointer bb b--light-gray"
          >
            <div
              class="relative flex justify-between items-center"
            >
              <div
                class="itemDescriptionContainer itemDescriptionContainerToggle flex"
              >
                <div>
                  <img
                    class="br3 mr4"
                    src="https://delivery.vteximg.com.br/arquivos/ids/155432/Topping_Jamon.jpg.png?v=636766052579200000"
                    style="height: 54px; width: 54px;"
                  />
                </div>
                <div
                  class="flex flex-column justify-center"
                >
                  <div
                    class="itemDescriptionName itemDescriptionNameToggle t-heading-5 c-on-base"
                  >
                    Ham
                  </div>
                </div>
              </div>
              <div
                class="toggleChoiceActions "
              >
                <div>
                  Checkbox props={"disabled":false,"name":"Ham","checked":true}
                </div>
              </div>
            </div>
          </div>
          <div
            class="toggleChoiceContainer selected bg-washed-blue db pa4 pointer bb b--light-gray"
          >
            <div
              class="relative flex justify-between items-center"
            >
              <div
                class="itemDescriptionContainer itemDescriptionContainerToggle flex"
              >
                <div>
                  <img
                    class="br3 mr4"
                    src="https://delivery.vteximg.com.br/arquivos/ids/155428/Topping_Pepperoni.jpg.png?v=636766047561270000"
                    style="height: 54px; width: 54px;"
                  />
                </div>
                <div
                  class="flex flex-column justify-center"
                >
                  <div
                    class="itemDescriptionName itemDescriptionNameToggle t-heading-5 c-on-base"
                  >
                    Pepperoni
                  </div>
                </div>
              </div>
              <div
                class="toggleChoiceActions "
              >
                <div>
                  Checkbox props={"disabled":false,"name":"Pepperoni","checked":true}
                </div>
              </div>
            </div>
          </div>
          <div
            class="toggleChoiceContainer selected bg-washed-blue db pa4 pointer bb b--light-gray"
          >
            <div
              class="relative flex justify-between items-center"
            >
              <div
                class="itemDescriptionContainer itemDescriptionContainerToggle flex"
              >
                <div>
                  <img
                    class="br3 mr4"
                    src="https://delivery.vteximg.com.br/arquivos/ids/155436/Topping_Champinones.png?v=636766057405600000"
                    style="height: 54px; width: 54px;"
                  />
                </div>
                <div
                  class="flex flex-column justify-center"
                >
                  <div
                    class="itemDescriptionName itemDescriptionNameToggle t-heading-5 c-on-base"
                  >
                    Champignon
                  </div>
                </div>
              </div>
              <div
                class="toggleChoiceActions "
              >
                <div>
                  Checkbox props={"disabled":false,"name":"Champignon","checked":true}
                </div>
              </div>
            </div>
          </div>
          <div
            class="toggleChoiceContainer selected bg-washed-blue db pa4 pointer bb b--light-gray"
          >
            <div
              class="relative flex justify-between items-center"
            >
              <div
                class="itemDescriptionContainer itemDescriptionContainerToggle flex"
              >
                <div>
                  <img
                    class="br3 mr4"
                    src="https://delivery.vteximg.com.br/arquivos/ids/155427/Topping_Cebolla.jpg.png?v=636766046799500000"
                    style="height: 54px; width: 54px;"
                  />
                </div>
                <div
                  class="flex flex-column justify-center"
                >
                  <div
                    class="itemDescriptionName itemDescriptionNameToggle t-heading-5 c-on-base"
                  >
                    Onion
                  </div>
                </div>
              </div>
              <div
                class="toggleChoiceActions "
              >
                <div>
                  Checkbox props={"disabled":false,"name":"Onion","checked":true}
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="dn"
        >
          <div
            class="ph5 pv4 c-muted-2 t-small"
          >
            <span>
              Extra ingredients
            </span>
          </div>
          <div
            class="multipleChoiceContainer false hover-bg-muted-5 w-100 ph4 pv5 bb b--muted-5"
          >
            <div
              class="relative flex justify-between items-center"
            >
              <div
                class="itemDescriptionContainer itemDescriptionContainerMultiple flex"
              >
                <div>
                  <img
                    class="br3 mr4"
                    src="https://delivery.vteximg.com.br/arquivos/ids/155432/Topping_Jamon.jpg.png?v=636766052579200000"
                    style="height: 54px; width: 54px;"
                  />
                </div>
                <div
                  class="flex flex-column justify-center"
                >
                  <div
                    class="itemDescriptionName itemDescriptionNameMultiple t-heading-5 c-on-base"
                  >
                    Ham
                  </div>
                  <div
                    class="itemDescription itemDescriptionMultiple flex items-center c-action-primary t-small fw5 mt1"
                  >
                    <div>
                      + 
                    </div>
                    <div>
                      ProductPrice
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex-auto flex-none-ns flex justify-end"
              >
                <div
                  class="multipleChoiceActions flex-none ml4 c-action-primary t-body fw5 z-1"
                >
                  <div>
                    NumericStepper
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="multipleChoiceContainer false hover-bg-muted-5 w-100 ph4 pv5 bb b--muted-5"
          >
            <div
              class="relative flex justify-between items-center"
            >
              <div
                class="itemDescriptionContainer itemDescriptionContainerMultiple flex"
              >
                <div>
                  <img
                    class="br3 mr4"
                    src="https://delivery.vteximg.com.br/arquivos/ids/155428/Topping_Pepperoni.jpg.png?v=636766047561270000"
                    style="height: 54px; width: 54px;"
                  />
                </div>
                <div
                  class="flex flex-column justify-center"
                >
                  <div
                    class="itemDescriptionName itemDescriptionNameMultiple t-heading-5 c-on-base"
                  >
                    Pepperoni
                  </div>
                  <div
                    class="itemDescription itemDescriptionMultiple flex items-center c-action-primary t-small fw5 mt1"
                  >
                    <div>
                      + 
                    </div>
                    <div>
                      ProductPrice
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex-auto flex-none-ns flex justify-end"
              >
                <div
                  class="multipleChoiceActions flex-none ml4 c-action-primary t-body fw5 z-1"
                >
                  <div>
                    NumericStepper
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="multipleChoiceContainer false hover-bg-muted-5 w-100 ph4 pv5 bb b--muted-5"
          >
            <div
              class="relative flex justify-between items-center"
            >
              <div
                class="itemDescriptionContainer itemDescriptionContainerMultiple flex"
              >
                <div>
                  <img
                    class="br3 mr4"
                    src="https://delivery.vteximg.com.br/arquivos/ids/155436/Topping_Champinones.png?v=636766057405600000"
                    style="height: 54px; width: 54px;"
                  />
                </div>
                <div
                  class="flex flex-column justify-center"
                >
                  <div
                    class="itemDescriptionName itemDescriptionNameMultiple t-heading-5 c-on-base"
                  >
                    Champignon
                  </div>
                  <div
                    class="itemDescription itemDescriptionMultiple flex items-center c-action-primary t-small fw5 mt1"
                  >
                    <div>
                      + 
                    </div>
                    <div>
                      ProductPrice
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex-auto flex-none-ns flex justify-end"
              >
                <div
                  class="multipleChoiceActions flex-none ml4 c-action-primary t-body fw5 z-1"
                >
                  <div>
                    NumericStepper
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="multipleChoiceContainer false hover-bg-muted-5 w-100 ph4 pv5 bb b--muted-5"
          >
            <div
              class="relative flex justify-between items-center"
            >
              <div
                class="itemDescriptionContainer itemDescriptionContainerMultiple flex"
              >
                <div>
                  <img
                    class="br3 mr4"
                    src="https://delivery.vteximg.com.br/arquivos/ids/155427/Topping_Cebolla.jpg.png?v=636766046799500000"
                    style="height: 54px; width: 54px;"
                  />
                </div>
                <div
                  class="flex flex-column justify-center"
                >
                  <div
                    class="itemDescriptionName itemDescriptionNameMultiple t-heading-5 c-on-base"
                  >
                    Onion
                  </div>
                  <div
                    class="itemDescription itemDescriptionMultiple flex items-center c-action-primary t-small fw5 mt1"
                  >
                    <div>
                      + 
                    </div>
                    <div>
                      ProductPrice
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex-auto flex-none-ns flex justify-end"
              >
                <div
                  class="multipleChoiceActions flex-none ml4 c-action-primary t-body fw5 z-1"
                >
                  <div>
                    NumericStepper
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="multipleChoiceContainer false hover-bg-muted-5 w-100 ph4 pv5 bb b--muted-5"
          >
            <div
              class="relative flex justify-between items-center"
            >
              <div
                class="itemDescriptionContainer itemDescriptionContainerMultiple flex"
              >
                <div>
                  <img
                    class="br3 mr4"
                    src="https://delivery.vteximg.com.br/arquivos/ids/155430/Topping_Aceitunas-Negras.jpg.png?v=636766049376970000"
                    style="height: 54px; width: 54px;"
                  />
                </div>
                <div
                  class="flex flex-column justify-center"
                >
                  <div
                    class="itemDescriptionName itemDescriptionNameMultiple t-heading-5 c-on-base"
                  >
                    Black Olives
                  </div>
                  <div
                    class="itemDescription itemDescriptionMultiple flex items-center c-action-primary t-small fw5 mt1"
                  >
                    <div>
                      + 
                    </div>
                    <div>
                      ProductPrice
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex-auto flex-none-ns flex justify-end"
              >
                <div
                  class="multipleChoiceActions flex-none ml4 c-action-primary t-body fw5 z-1"
                >
                  <div>
                    NumericStepper
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="multipleChoiceContainer false hover-bg-muted-5 w-100 ph4 pv5 bb b--muted-5"
          >
            <div
              class="relative flex justify-between items-center"
            >
              <div
                class="itemDescriptionContainer itemDescriptionContainerMultiple flex"
              >
                <div>
                  <img
                    class="br3 mr4"
                    src="https://delivery.vteximg.com.br/arquivos/ids/155431/PIMIENTO-VERDE.png?v=636766050771230000"
                    style="height: 54px; width: 54px;"
                  />
                </div>
                <div
                  class="flex flex-column justify-center"
                >
                  <div
                    class="itemDescriptionName itemDescriptionNameMultiple t-heading-5 c-on-base"
                  >
                    Green Pepper
                  </div>
                  <div
                    class="itemDescription itemDescriptionMultiple flex items-center c-action-primary t-small fw5 mt1"
                  >
                    <div>
                      + 
                    </div>
                    <div>
                      ProductPrice
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex-auto flex-none-ns flex justify-end"
              >
                <div
                  class="multipleChoiceActions flex-none ml4 c-action-primary t-body fw5 z-1"
                >
                  <div>
                    NumericStepper
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="multipleChoiceContainer false hover-bg-muted-5 w-100 ph4 pv5 bb b--muted-5"
          >
            <div
              class="relative flex justify-between items-center"
            >
              <div
                class="itemDescriptionContainer itemDescriptionContainerMultiple flex"
              >
                <div>
                  <img
                    class="br3 mr4"
                    src="https://delivery.vteximg.com.br/arquivos/ids/155435/Topping_Pina.jpg.png?v=636766056177370000"
                    style="height: 54px; width: 54px;"
                  />
                </div>
                <div
                  class="flex flex-column justify-center"
                >
                  <div
                    class="itemDescriptionName itemDescriptionNameMultiple t-heading-5 c-on-base"
                  >
                    Pineapple
                  </div>
                  <div
                    class="itemDescription itemDescriptionMultiple flex items-center c-action-primary t-small fw5 mt1"
                  >
                    <div>
                      + 
                    </div>
                    <div>
                      ProductPrice
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex-auto flex-none-ns flex justify-end"
              >
                <div
                  class="multipleChoiceActions flex-none ml4 c-action-primary t-body fw5 z-1"
                >
                  <div>
                    NumericStepper
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-100"
      />
      <div
        class="z-2 fixed bg-white bottom-0 w-40-ns ph1-ns w-100 bt b--light-gray"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProductCustomizer components  render with variations example, show sku selector 1`] = `
<DocumentFragment>
  <div
    class="flex-ns pv6-ns justify-center-ns"
  >
    <div
      class="w-100 w-third-ns flex tc items-center-ns h-100-ns ph2-ns"
    >
      <img
        alt="PARRILLADA"
        class="image"
        src="https://phmex.vteximg.com.br/arquivos/ids/155565/PARRILLADA.jpg?v=636834183659030000"
        style="object-fit: cover;"
      />
    </div>
    <div
      class="w-40-ns ph2-ns"
    >
      <div
        class="productName t-heading-4 c-on-base ph5 pt5-s"
      >
        Parrillada
      </div>
      <div
        class="ph5 pt4 pb2 pb4-ns"
      />
      <div
        class="ph5"
      >
        <div>
          ExtensionPoint id="sku-selector"
        </div>
      </div>
      <div />
      <div
        class="w-100"
      />
      <div
        class="z-2 fixed bg-white bottom-0 w-40-ns ph1-ns w-100 bt b--light-gray"
      />
    </div>
  </div>
</DocumentFragment>
`;
